--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -155,6 +155,7 @@
     <string name="request_chat_no_messages_found">Здесь пока нет сообщений!</string>
     <string name="request_chat_messages_not_allowed_title">Отправка сообщений недоступна</string>
     <string name="request_chat_messages_not_allowed_description">Данный запрос был закрыт</string>
+    <string name="request_chat_jump_to_bottom_text">Вернуться вниз</string>
 
     <!-- REQUEST CARD -->
     <string name="request_card_status_text">Статус:</string>
