--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -166,6 +166,7 @@
     <string name="request_chat_jump_to_bottom_text">Вернуться вниз</string>
     <string name="request_chat_cant_connect_to_chat_error_title">Невозможно подключиться к чату</string>
     <string name="request_chat_cant_send_message_error_title">Невозможно отправить сообщение</string>
+    <string name="request_chat_pinned_problem_description_title">Описание проблемы</string>
 
     <!-- REQUEST CARD -->
     <string name="request_card_status_text">Статус:</string>
