--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
 
     <!-- TARIFFS SCREEN -->
     <string name="tariffs_list_screen_name">Tariffs</string>
+    <string name="tariffs_list_open_tariffs_archive_button_text">Open tariffs archive</string>
     <string name="tariffs_list_loading_failed_text">Failed to load</string>
 
     <!-- ANNOUNCEMENTS SCREEN -->
