--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -202,6 +202,7 @@
     <!-- TARIFF CARD -->
     <string name="tariff_card_month_text">месяц</string>
     <string name="tariff_card_max_speed_text">Скорость до %d мегабит в секунду</string>
+    <string name="tariff_card_of_prepaid_traffic">трафика</string>
     <!-- DETAILS -->
     <plurals name="tariff_card_prepaid_traffic_value">
         <item quantity="one">%d Гигабайт</item>
@@ -215,9 +216,10 @@
         <item quantity="many">%d рублей</item>
         <item quantity="other">%d рублей</item>
     </plurals>
-    <string name="tariff_card_max_speed_value">До %d Мбит в секунду</string>
+    <string name="tariff_card_speed_limit_value">До %d Мбит в секунду</string>
+    <string name="tariff_card_speed_limit_none_value">Без ограничений</string>
     <string name="tariff_card_cost_text">Стоимость в месяц</string>
-    <string name="tariff_card_maximum_speed_details_text">Максимальная скорость</string>
+    <string name="tariff_card_speed_limit_details_text">Ограничение скорости</string>
     <string name="tariff_card_prepaid_traffic_amount_text">Предоплаченный трафик</string>
     <string name="tariff_card_prepaid_traffic_unlimited_text">Безлимит</string>
     <string name="tariff_card_connect_from_billing_date">Подключить со следующей расчётной даты</string>
