--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,6 +200,7 @@
     <!-- TARIFF CARD -->
     <string name="tariff_card_month_text">month</string>
     <string name="tariff_card_max_speed_text">Speed up to %d Mbits/s</string>
+    <string name="tariff_card_of_prepaid_traffic">of traffic</string>
     <!-- DETAILS -->
     <plurals name="tariff_card_prepaid_traffic_value">
         <item quantity="one">%d gigabyte</item>
@@ -211,9 +212,10 @@
         <item quantity="many">%d rubles</item>
         <item quantity="other">%d rubles</item>
     </plurals>
-    <string name="tariff_card_max_speed_value">Up to %d Mbits/s</string>
+    <string name="tariff_card_speed_limit_value">Up to %d Mbits/s</string>
+    <string name="tariff_card_speed_limit_none_value">No limit</string>
     <string name="tariff_card_cost_text">Cost per month</string>
-    <string name="tariff_card_maximum_speed_details_text">Maximum speed</string>
+    <string name="tariff_card_speed_limit_details_text">Speed limit</string>
     <string name="tariff_card_prepaid_traffic_amount_text">Prepaid traffic amount</string>
     <string name="tariff_card_prepaid_traffic_unlimited_text">Unlimited</string>
     <string name="tariff_card_connect_from_billing_date">Connect from next billing date</string>
