--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -214,14 +214,21 @@
 
     <!-- TARIFF CARD -->
     <string name="tariff_card_month_text">месяц</string>
-    <string name="tariff_card_max_speed_text">Скорость до %d мегабит в секунду</string>
+    <string name="tariff_card_max_speed_megabits_text">Скорость до %d мегабит в секунду</string>
+    <string name="tariff_card_max_speed_kilobits_text">Скорость до %d килобит в секунду</string>
     <string name="tariff_card_of_prepaid_traffic">трафика</string>
     <!-- DETAILS -->
-    <plurals name="tariff_card_prepaid_traffic_value">
-        <item quantity="one">%d Гигабайт</item>
-        <item quantity="few">%d Гигабайта</item>
-        <item quantity="many">%d Гигабайт</item>
-        <item quantity="other">%d Гигабайт</item>
+    <plurals name="tariff_card_prepaid_traffic_gigabytes_value">
+        <item quantity="one">%d гигабайт</item>
+        <item quantity="few">%d гигабайта</item>
+        <item quantity="many">%d гигабайт</item>
+        <item quantity="other">%d гигабайт</item>
+    </plurals>
+    <plurals name="tariff_card_prepaid_traffic_megabytes_value">
+        <item quantity="one">%d мегабайт</item>
+        <item quantity="few">%d мегабайта</item>
+        <item quantity="many">%d мегабайт</item>
+        <item quantity="other">%d мегабайт</item>
     </plurals>
     <plurals name="tariff_card_cost_value">
         <item quantity="one">%d рубль</item>
@@ -229,7 +236,8 @@
         <item quantity="many">%d рублей</item>
         <item quantity="other">%d рублей</item>
     </plurals>
-    <string name="tariff_card_speed_limit_value">До %d Мбит в секунду</string>
+    <string name="tariff_card_speed_limit_megabits_value">До %d Мбит в секунду</string>
+    <string name="tariff_card_speed_limit_kilobits_value">До %d Кбит в секунду</string>
     <string name="tariff_card_speed_limit_none_value">Без ограничений</string>
     <string name="tariff_card_cost_text">Стоимость в месяц</string>
     <string name="tariff_card_speed_limit_details_text">Ограничение скорости</string>
