--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -135,13 +135,29 @@
     <string name="personal_account_afternoon_text">Добрый день</string>
     <string name="personal_account_evening_text">Добрый вечер</string>
     <string name="personal_account_night_text">Доброй ночи</string>
-    <string name="personal_account_current_balance_title">Ваш баланс</string>
-    <string name="personal_account_current_tariff_title">Текущий тариф</string>
-    <string name="personal_account_debit_remaining_days_title">До списания</string>
-    <plurals name="personal_account_debit_remaining_days_value">
+    <string name="personal_account_top_bar_current_balance_title">Баланс</string>
+    <string name="personal_account_top_bar_current_tariff_title">Тариф</string>
+    <string name="personal_account_top_bar_current_tariff_load_error_text">Ошибка</string>
+    <string name="personal_account_top_bar_payment_remaining_days_title">До списания</string>
+    <string name="personal_account_top_bar_payment_remaining_days_less_than_hour_text">Менее часа</string>
+    <string name="personal_account_top_bar_notification_title">Уведомления</string>
+    <string name="personal_account_top_bar_notification_enabled_text">Включены</string>
+    <string name="personal_account_top_bar_notification_disabled_text">Отключены</string>
+    <string name="personal_account_top_bar_employee_rating_title">Рейтинг</string>
+    <string name="personal_account_top_bar_employee_rating_none_text">Отсутствует</string>
+    <string name="personal_account_top_bar_employee_rating_great_text">Отличный</string>
+    <string name="personal_account_top_bar_employee_rating_good_text">Хороший</string>
+    <string name="personal_account_top_bar_employee_rating_acceptable_text">Приемлемый</string>
+    <string name="personal_account_top_bar_employee_rating_bad_text">Низкий</string>
+    <plurals name="personal_account_top_bar_payment_remaining_days_value">
         <item quantity="one">%d день</item>
         <item quantity="few">%d дня</item>
         <item quantity="many">%d дней</item>
+    </plurals>
+    <plurals name="personal_account_top_bar_payment_remaining_hours_value">
+        <item quantity="one">%d час</item>
+        <item quantity="few">%d часа</item>
+        <item quantity="many">%d часов</item>
     </plurals>
 
     <!-- SETTINGS SCREEN -->
